[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/EndScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/SxVignette.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/Vignette.gdshader" type="Shader" id=3]
[ext_resource path="res://addons/sxgd/assets/fonts/Jost-800-Heavy.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://screens/Options/OptionSlider.tscn" type="PackedScene" id=5]
[ext_resource path="res://screens/Options/Options.gd" type="Script" id=6]
[ext_resource path="res://assets/fx/jump.wav" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/size = 2.0
shader_param/ratio = 0.75

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0.152941, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0.152941, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="EndScene" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="SxVignette" parent="." instance=ExtResource( 2 )]
material = SubResource( 1 )
vignette_size = 2.0
vignette_ratio = 0.75

[node name="EffectsTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 812.0
margin_bottom = 460.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 792.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 89.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 723.0
margin_right = 792.0
margin_bottom = 41.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 3 )
text = "Back"
flat = true

[node name="Margin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 792.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Margin"]
margin_right = 792.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin/VBoxContainer"]
margin_top = 114.0
margin_right = 792.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin/VBoxContainer/Resolution"]
margin_top = 3.0
margin_right = 200.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Margin/VBoxContainer/Resolution"]
margin_left = 204.0
margin_right = 792.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "832x480"
align = 2
items = [ "832x480", null, false, 0, null, "1040x600", null, false, 1, null, "1248x720", null, false, 2, null, "1664x960", null, false, 3, null ]
selected = 0

[node name="EffectsVolume" parent="MarginContainer/VBoxContainer/Margin/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 175.0
margin_right = 792.0
margin_bottom = 210.0
option_name = "Effects volume"

[node name="MusicVolume" parent="MarginContainer/VBoxContainer/Margin/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 230.0
margin_right = 792.0
margin_bottom = 265.0
option_name = "Music volume"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="go_back"]
